--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ node_modules/
 # Build output
 dist/
 
-# Environment variables
-.env
+# Environment variable
 .env.local
 .env.development.local
 .env.production.local
@@ -23,3 +22,5 @@ dist/
 .vscode/
 .idea/
 .DS_Store
+
+elasticsearch.txt
