--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,20 @@
-# Use Python base image
+# Use Python 3.11 as the base image
 FROM python:3.11
 
-# Set the working directory
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the application files
+# Copy application files
 COPY . /app
 
+# Upgrade pip and install dependencies
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the backend port (e.g., 5000)
+# Set environment variables if needed
+ENV PYTHONUNBUFFERED=1
+
+# Expose backend port
 EXPOSE 5000
 
 # Run the Quart app
